Address comments. Add features.
* Use jetty instead of java http. Use ESH factories for http+websocket.
* Add temperature and light sensor.
* Use UoM where applicable.
* Make SensorThing offline if not reachable or off
* Display battery percentage as property in SensorThing

Signed-off-by: David Graeff <david.graeff@web.de>